DRi#1372: on Mac, make installed binaries writable so the install_name_tool can update them.
SVN-Revision: 1730

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -818,6 +818,13 @@ if (DEFINED GENERATE_PDBS AND NOT GENERATE_PDBS)
   endforeach ()
 endif (DEFINED GENERATE_PDBS AND NOT GENERATE_PDBS)
 
+if (APPLE)
+  # install_name_tool needs write access (i#1372)
+  set(owner_access OWNER_READ OWNER_WRITE)
+else (APPLE)
+  set(owner_access OWNER_READ)
+endif (APPLE)
+
 ##################################################
 # now that we have ${DynamoRIO_DIR} we can configure docs
 
@@ -1463,22 +1470,22 @@ endmacro(install_if_32bit)
 install_if_32bit(TARGETS ${client_target}
   RUNTIME DESTINATION "${INSTALL_LIB}" # dll
   LIBRARY DESTINATION "${INSTALL_LIB}" # .so
-  PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+  PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
   WORLD_READ WORLD_EXECUTE)
 install(TARGETS symquery DESTINATION "${INSTALL_BIN}"
-  PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+  PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
   WORLD_READ WORLD_EXECUTE)
 if (WIN32)
   # XXX i#926: remove winsyms once we remove postleaks.pl.
   # Also removed its pdb below via: PATTERN "winsyms.pdb" EXCLUDE
   install(TARGETS winsyms DESTINATION "${INSTALL_BIN}"
-    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+    PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE)
   install(FILES
     ${PROJECT_BINARY_DIR}/${BUILD_BIN}/dbghelp.dll
     ${PROJECT_BINARY_DIR}/${BUILD_BIN}/symsrv.dll
     DESTINATION "${INSTALL_BIN}"
-    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+    PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE)
   install(FILES
     ${PROJECT_BINARY_DIR}/${BUILD_BIN}/symsrv.yes
@@ -1487,7 +1494,7 @@ if (WIN32)
     install(FILES
       ${PROJECT_BINARY_DIR}/${BUILD_BIN}/dbghelp.dll
       DESTINATION "${INSTALL_LIB}"
-      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+      PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
       WORLD_READ WORLD_EXECUTE)
   endif (USE_DRSYMS)
   if (USE_DRSYMS AND TOOL_DR_MEMORY)
@@ -1498,7 +1505,7 @@ if (WIN32)
       ${PROJECT_BINARY_DIR}/${BUILD_BIN}/dynamorio.dll
       ${PROJECT_BINARY_DIR}/${BUILD_BIN}/drconfig.exe
       DESTINATION "${INSTALL_BIN}"
-      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+      PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
       WORLD_READ WORLD_EXECUTE)
   endif (USE_DRSYMS AND TOOL_DR_MEMORY)
   install(FILES
@@ -1515,13 +1522,13 @@ install(FILES
   DESTINATION "${INSTALL_PREFIX}.")
 if (WIN32 AND USE_DRSYMS AND TOOL_DR_MEMORY)
   install_if_32bit(TARGETS ${toolname} DESTINATION "${INSTALL_BIN}"
-    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+    PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE)
 else (WIN32 AND USE_DRSYMS AND TOOL_DR_MEMORY)
   install_if_32bit(FILES
     ${script_main}
     DESTINATION "${INSTALL_BIN}"
-    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+    PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE)
 endif (WIN32 AND USE_DRSYMS AND TOOL_DR_MEMORY)
 # We put "helper" files inside ${BIN_ARCH}/ so only top-level script is visible
@@ -1529,7 +1536,7 @@ if (NOT "${script_aux}" STREQUAL "")
   install_if_32bit(FILES
     ${script_aux}
     DESTINATION "${INSTALL_BIN}"
-    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+    PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
     WORLD_READ WORLD_EXECUTE)
 endif ()
 if (TOOL_DR_HEAPSTAT)
@@ -1537,18 +1544,18 @@ if (TOOL_DR_HEAPSTAT)
     install_if_32bit(FILES
       ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${toolname}.swf
       DESTINATION "${INSTALL_BIN}"
-      PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+      PERMISSIONS ${owner_access} GROUP_READ WORLD_READ)
   endif (BUILD_VISUALIZER)
 else (TOOL_DR_HEAPSTAT)
   install(FILES
     ${PROJECT_BINARY_DIR}/${BUILD_BIN}/suppress-default.txt
     DESTINATION "${INSTALL_BIN}"
-    PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+    PERMISSIONS ${owner_access} GROUP_READ WORLD_READ)
   if (UNIX)
     install(FILES
       ${PROJECT_BINARY_DIR}/${BUILD_BIN}/valgrind2drmemory.pl
       DESTINATION "${INSTALL_PREFIX}bin"
-      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+      PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
       WORLD_READ WORLD_EXECUTE)
   endif (UNIX)
 endif (TOOL_DR_HEAPSTAT)
@@ -1565,7 +1572,7 @@ else (X64)
 endif (X64)
 install(DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/
   DESTINATION "${INSTALL_LIB}"
-  FILE_PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+  FILE_PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
   WORLD_READ WORLD_EXECUTE
   FILES_MATCHING
   PATTERN "*.debug"
@@ -1574,7 +1581,7 @@ install(DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/
   )
 install(DIRECTORY ${PROJECT_BINARY_DIR}/${BUILD_BIN}/
   DESTINATION "${INSTALL_BIN}"
-  FILE_PERMISSIONS OWNER_READ OWNER_EXECUTE
+  FILE_PERMISSIONS ${owner_access} OWNER_EXECUTE
   GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
   FILES_MATCHING
   PATTERN "*.debug"
@@ -1673,7 +1680,7 @@ install(FILES ${framework_dir}/DrMemoryFrameworkConfigVersion.cmake
 # These cover all subdirs
 install(DIRECTORY ${framework_bindir}/
   DESTINATION ${DRMF_INSTALL_BIN}
-  FILE_PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+  FILE_PERMISSIONS ${owner_access} OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
   WORLD_READ WORLD_EXECUTE
   FILES_MATCHING
   PATTERN "*.debug"
