--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1734,7 +1734,11 @@ if (UNIX)
   if (VMKERNEL)
     set(CPACK_SYSTEM_NAME "ESXi")
   else (VMKERNEL)
-    set(CPACK_SYSTEM_NAME "Linux")
+    if (APPLE)
+      set(CPACK_SYSTEM_NAME "MacOS")
+    else (APPLE)
+      set(CPACK_SYSTEM_NAME "Linux")
+    endif (APPLE)
   endif (VMKERNEL)
 else (UNIX)
   # do not require NSIS, since we do "make package" as part of test suite
