--- a/umbra/CMakeLists.txt
+++ b/umbra/CMakeLists.txt
@@ -21,7 +21,8 @@
 # UMBRA: the shadow memory framework
 cmake_minimum_required(VERSION 2.8.10)
 
-if ("${CMAKE_VERSION}" VERSION_GREATER "2.8.11")
+if ("${CMAKE_VERSION}" VERSION_EQUAL "2.8.12" OR
+    "${CMAKE_VERSION}" VERSION_GREATER "2.8.12")
   # XXX DRi#1481: update to cmake 2.8.12's better handling of interface imports
   cmake_policy(SET CMP0022 OLD)
 endif ()
